# jp-ai

./: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: main.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: knowledge_tool.py  middlewares.py  mysql_agent_saver.py  router_agent.py
backend/app/agent/sub_agent/: __init__.py  agent_service_v2.py  daily_agent.py
backend/app/api/: api_response.py  conversation_api.py  knowledge_api.py  user_api.py
backend/app/common/api/: __init__.py  api_response.py
backend/app/common/schemas/: __init__.py  page_schema.py
backend/app/conversation/api/: __init__.py  conversation_api.py
backend/app/conversation/dao/: conversation_dao.py  message_dao.py
backend/app/conversation/schemas/: __init__.py  conversation_schema.py  message_schema.py
backend/app/conversation/service/: __init__.py  conversation_service.py
backend/app/dao/: conversation_dao.py  kb_file_dao.py  kb_space_dao.py  message_dao.py  rag_pipeline_record.py  user_dao.py
backend/app/infra/: __init__.py  agent_memory.py  embd.py  files.py  mysql.py  ocr.py  redis.py  settings.py  vecstore.py
backend/app/rag/api/: __init__.py  knowledge_api.py
backend/app/rag/dao/: kb_file_dao.py  kb_space_dao.py  rag_pipeline_record.py
backend/app/rag/schemas/: __init__.py
backend/app/rag/service/: __init__.py  knowledge_service.py  rag_pipeline_service.py  rag_service.py
backend/app/schemas/: conversation_schema.py  message_schema.py  rag_schema.py
backend/app/service/: agent_router_service.py  agent_service.py  agent_service_v2.py  conversation_service.py  knowledge_service.py  rag_pipeline_service.py  rag_service.py  user_service.py
backend/app/user/api/: __init__.py  user_api.py
backend/app/user/dao/: user_dao.py
backend/app/user/schemas/: __init__.py  user_schema.py
backend/app/user/service/: __init__.py  auth_service.py  user_service.py
backend/doc/: 文件解析质量评估.md
backend/openspec/: design.md
backend/scripts/sql/: v1_chat.sql
backend/tests/: buyanocr_test.py  rag_pipeline_test.py  test_utils.py  tool_test.py
backend/tests/rag_eval/: Makefile  _1_prep_gold.py  _2_run_eval.py  gold_chunk_vectors.faiss  gold_chunk_vectors.pkl  gold_chunks.json  gold_qa.json  last_scores.json  main.py
backend/tests/rag_pipeline_eval/test_parse/: detailed_results.json  evaluate.py
web/: Dockerfile  (+7 more)
(+81 files in other folders)
